--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 /* Tag selector to select the 'body' element */
 body {
-  color:#00b3e6;
+  color: #00b3e6;
   /* Your code here! */
 }
 
 /* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
 div {
-  width:;
+  width: 700px;
+  margin: auto;
+  font-family: "Helvetica Neue";
+  background: white;
+  padding: 30px;
   /* Your code here! */
 }
 
